--- a/style.css
+++ b/style.css
@@ -69,14 +69,15 @@ li{
 
 #planetinfo{
     color: aliceblue;
+    width: 30rem;
     display: flex;
-    margin: 3rem;
     flex-direction: column;
-    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
-
+/*
 #ellipse1{
 
 }
@@ -148,3 +149,4 @@ li{
     transform: translateX(-300px);
     background-color: rgb(65, 121, 232);
 }
+*/
